--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@comake/rmlmapper-js": "^0.5.2",
     "@comunica/query-sparql": "^4.1.0",
     "@rmlio/yarrrml-parser": "^1.10.0",
+    "cli-table3": "^0.6.5",
     "csv-parse": "^5.6.0",
     "eyereasoner": "^18.10.0",
     "jsonld": "^8.3.3",
